Bug 480841 - Hardware sensors under sensors in system monitor seem to be broken in plasma 6
Summary: Hardware sensors under sensors in system monitor seem to be broken in plasma 6
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.93.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords: qt6
: 480840 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-02-04 10:23 UTC by qlum
Modified: 2024-02-11 03:03 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
sensors listed under hardware sensors (10.88 KB, image/png)
2024-02-04 10:23 UTC, qlum
Details

Note You need to log in before you can comment on or make changes to this bug.
Description qlum 2024-02-04 10:23:14 UTC
Created attachment 165534 [details]
sensors listed under hardware sensors

SUMMARY
***
On plasma 5 I was able to use basically all sensors available in lm-sensors under system monitor. However those catagerized as "other" / under Hardware Sensors no longer work in plasma 6. The "sensors" listed under hardware sensors do not actually work and are only a fraction of the available sensors.
***
Steps to reproduce:
- Run lm-sensors to take note of the available sensors
- open system monitor, create a new page and try to add these sensors

Observed result:
Take note that not all sensors are available and that the sensors under "Hardware Sensors" will not report anything.

Expected Result:
All sensors are available and are as functional as the ones in lm-sensors.

Additional Info:

In my desktop cases  specifically, all the sensors on my nct6686-isa-0a20 no longer appear in system monitor.
The same goes for nvme-pci-0d00, nvme-pci-0a00, nvme-pci-0600, k10temp-pci-00c3, and iwlwifi_1-virtual-0 Although I do not know if these ever appeared, as I didn't really use them.

There do appear some hardware sensors in system monitor but these seem to be broken.
Below the full output of lm-sensors:
iwlwifi_1-virtual-0
Adapter: Virtual device
temp1:        +32.0°C  

nvme-pci-0d00
Adapter: PCI adapter
Composite:    +36.9°C  (low  = -40.1°C, high = +83.8°C)
                       (crit = +87.8°C)
Sensor 1:     +56.9°C  (low  = -273.1°C, high = +65261.8°C)
Sensor 2:     +30.9°C  (low  = -273.1°C, high = +65261.8°C)

nvme-pci-0a00
Adapter: PCI adapter
Composite:    +31.9°C  (low  = -273.1°C, high = +89.8°C)
                       (crit = +94.8°C)
Sensor 1:     +31.9°C  (low  = -273.1°C, high = +65261.8°C)
Sensor 2:     +31.9°C  (low  = -273.1°C, high = +65261.8°C)

amdgpu-pci-0300
Adapter: PCI adapter
vddgfx:      705.00 mV 
fan1:           0 RPM  (min =    0 RPM, max = 3300 RPM)
edge:         +48.0°C  (crit = +100.0°C, hyst = -273.1°C)
                       (emerg = +105.0°C)
junction:     +55.0°C  (crit = +110.0°C, hyst = -273.1°C)
                       (emerg = +115.0°C)
mem:          +66.0°C  (crit = +108.0°C, hyst = -273.1°C)
                       (emerg = +113.0°C)
PPT:          28.00 W  (cap = 290.00 W)

nct6686-isa-0a20
Adapter: ISA adapter
+12V:            0.00 V  (min =  +0.00 V, max =  +0.00 V)
+5V:             0.00 V  (min =  +0.00 V, max =  +0.00 V)
+3.3V:           3.42 V  (min =  +3.39 V, max =  +3.42 V)
CPU Soc:         0.00 V  (min =  +0.00 V, max =  +0.00 V)
CPU Vcore:       0.00 V  (min =  +0.00 V, max =  +0.00 V)
CPU 1P8:         0.00 V  (min =  +0.00 V, max =  +0.00 V)
CPU VDDP:        0.00 V  (min =  +0.00 V, max =  +0.00 V)
DRAM:            0.00 V  (min =  +0.00 V, max =  +0.00 V)
Chipset:         0.00 V  (min =  +0.00 V, max =  +0.00 V)
CPU SA:          0.00 V  (min =  +0.00 V, max =  +0.00 V)
Voltage #2:      0.00 V  (min =  +0.00 V, max =  +0.00 V)
AVCC3:           0.00 V  (min =  +0.00 V, max =  +0.00 V)
AVSB:            3.39 V  (min =  +3.39 V, max =  +3.42 V)
VBat:            1.81 V  (min =  +1.81 V, max =  +1.81 V)
CPU Fan:        644 RPM  (min =  643 RPM, max =  731 RPM)
Pump Fan:         0 RPM  (min =    0 RPM, max =    0 RPM)
System Fan #1:    0 RPM  (min =    0 RPM, max =    0 RPM)
System Fan #2:    0 RPM  (min =    0 RPM, max =    0 RPM)
System Fan #3:  747 RPM  (min =  744 RPM, max = 1465 RPM)
System Fan #4:    0 RPM  (min =    0 RPM, max =    0 RPM)
System Fan #5:    0 RPM  (min =    0 RPM, max =    0 RPM)
System Fan #6:    0 RPM  (min =    0 RPM, max =    0 RPM)
CPU:            +15.0°C  (low  = +15.0°C, high = +15.5°C)
System:         +32.0°C  (low  = +32.0°C, high = +33.5°C)
VRM MOS:        +30.0°C  (low  = +29.5°C, high = +32.0°C)
PCH:            +40.0°C  (low  = +37.0°C, high = +64.0°C)
CPU Socket:     +65.0°C  (low  = +57.0°C, high = +71.0°C)
PCIe x1:        +62.0°C  (low  = +62.0°C, high = +62.0°C)
M2_1:           +63.0°C  (low  = +63.0°C, high = +63.0°C)

k10temp-pci-00c3
Adapter: PCI adapter
Tctl:         +40.4°C  
Tccd1:        +32.2°C  

nvme-pci-0600
Adapter: PCI adapter
Composite:    +29.9°C  (low  = -273.1°C, high = +84.8°C)
                       (crit = +84.8°C)
Sensor 1:     +29.9°C  (low  = -273.1°C, high = +65261.8°C)
Sensor 2:     +33.9°C  (low  = -273.1°C, high = +65261.8°C)

amdgpu-pci-0e00
Adapter: PCI adapter
vddgfx:        1.04 V  
vddnb:         1.19 V  
edge:         +32.0°C  
PPT:          20.10 W  


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
Kernel: 6.7.3-zen
Distro: Arch linux
KDE Plasma Version:  5.93.0
KDE Frameworks Version:  5.249.0
Qt Version: 6.7.0

Relevant hardware:
Motherboard: B650 live mixer, with an out-of-tree driver for the motherboard sensor.

Reproduction tests:
I also tested this on two tablet pc's one running plasma 6 rc2 and the other running plasma 5.27
There are a lot less sensors available on those, but the gist is the same, sensors under the hardware sensors tabs work on plasma 5.27 but not plasma 6.
Comment 1 Pieter van der Vegte 2024-02-05 08:19:31 UTC
*** Bug 480840 has been marked as a duplicate of this bug. ***
Comment 2 Bug Janitor Service 2024-02-05 15:26:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/ksystemstats/-/merge_requests/74
Comment 3 Arjen Hiemstra 2024-02-07 11:19:16 UTC
Git commit 455ba6364c0323d907d3c99729f4b93f0bf50a94 by Arjen Hiemstra.
Committed on 07/02/2024 at 11:18.
Pushed by ahiemstra into branch 'master'.

lmsensors: Remove `\x00` from sensor object names

Apparently we can end up with `\x00` in sensor object names in certain
cases. This then results in path matching failing and sensors not being
added properly. So get rid of any such characters in sensor object
names.

M  +6    -0    plugins/lmsensors/lmsensors.cpp

https://invent.kde.org/plasma/ksystemstats/-/commit/455ba6364c0323d907d3c99729f4b93f0bf50a94
Comment 4 Arjen Hiemstra 2024-02-07 12:11:17 UTC
Git commit ec5f07e79ccb03d73eea6b251ffccd9342bf842f by Arjen Hiemstra.
Committed on 07/02/2024 at 12:09.
Pushed by ahiemstra into branch 'Plasma/6.0'.

lmsensors: Remove `\x00` from sensor object names

Apparently we can end up with `\x00` in sensor object names in certain
cases. This then results in path matching failing and sensors not being
added properly. So get rid of any such characters in sensor object
names.


(cherry picked from commit 455ba6364c0323d907d3c99729f4b93f0bf50a94)

M  +6    -0    plugins/lmsensors/lmsensors.cpp

https://invent.kde.org/plasma/ksystemstats/-/commit/ec5f07e79ccb03d73eea6b251ffccd9342bf842f
Comment 5 Pieter van der Vegte 2024-02-11 03:03:01 UTC
Working properly for me now.
Thank you :-)