lmsensors: Remove `\x00` from sensor object names

Apparently we can end up with `\x00` in sensor object names in certain
cases. This then results in path matching failing and sensors not being
added properly. So get rid of any such characters in sensor object
names.

BUG: 480841


(cherry picked from commit 455ba6364c0323d907d3c99729f4b93f0bf50a94)